--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,77 @@
-<!DOCTYPE html>
-<html>
+ <!DOCTYPE html>
+<html ng-app="Meet2Eat">
 <head>
   <title>Meet2Eat</title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
+    <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
+    <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
+
+  
+  <!-- <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/bootstrap/dist/css/bootstrap.css"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+ -->
+
+  <script src="/js/app.js"></script>
+  <script src="/js/controllers/main.js"></script>
+  <script src="/js/controllers/login.js"></script>
+  <script src="/js/controllers/register.js"></script>
+
+  <script src="/js/models/user.js"></script>
+  <script src="/js/services/authInterceptor.js"></script>
+  <script src="/js/services/token.js"></script>
+
+
+
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css">
+
+
+  <script type="text/javascript" src="/js/models/user.js"></script>
+<!--   <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+
+
+
+
+
+
+
+
+
+
+  
 </head>
-<body>
-  <h1>Meet2Eat</h1>
-  <p>This is the test. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<body ng-controller="MainController as main">
+  <header>
+    <nav class="navbar navbar-light bg-faded">
+      <a class="navbar-brand" ui-sref="home">Meet2Eat</a>
+      <ul class="nav navbar-nav">
+        <li class="nav-item" ui-sref-active="active">
+          <a class="nav-link" ui-sref="home">Home</a>
+        </li>
+        <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+          <a class="nav-link" ui-sref="register">Register</a>
+        </li>
+        <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
+          <a class="nav-link" ui-sref="login">Login</a>
+        </li>
+        <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
+          <a class="nav-link" ui-sref="users">Users</a>
+        </li>
+        <li class="nav-item" ng-if="main.currentUser">
+          <a ng-click="main.logout()" class="nav-link">Logout</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+    <div class="container" ng-if="main.errorMessage">
+      <div class="alert alert-danger"></div>
+    </div>
+  <main class="container" ui-view></main>
 </body>
 </html>
