Map markers working and crud user edit and delete added

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
   <script src="/js/controllers/login.js"></script>
   <script src="/js/controllers/register.js"></script>
   <script src="/js/controllers/users.js"></script>
+  <script src="/js/controllers/show.js"></script>
+  <script src="/js/controllers/edit.js"></script>
   <script src="/js/controllers/map.js"></script>
 
   <script src="/js/models/user.js"></script>
