--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
     <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
     <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBJ990JUIqfos2FWQPRQtxiavV3AhL72I"></script>
+    <script src="bower_components/socket.io-client/socket.io.js"></script>
 
-  
-  <!-- <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/bootstrap/dist/css/bootstrap.css"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"> -->
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/bootstrap/dist/css/bootstrap.css"></script>
+ 
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
 
   <script src="/js/app.js"></script>
@@ -26,6 +27,7 @@
   <script src="/js/controllers/show.js"></script>
   <script src="/js/controllers/edit.js"></script>
   <script src="/js/controllers/map.js"></script>
+  <script src="/js/controllers/chat.js"></script>
 
   <script src="/js/models/user.js"></script>
   <script src="/js/services/authInterceptor.js"></script>
@@ -34,7 +36,7 @@
 
 
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css">
+ 
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 
   
@@ -60,7 +62,7 @@
           <a class="nav-link" ui-sref="map">Map</a>
         </li>
         <li class="nav-item" ng-if="main.currentUser">
-          <a ng-click="main.logout()" class="nav-link">Logout</a>
+          <a ng-click="main.logout()" class="nav-link">Logout {{main.currentUser.username}}</a>
         </li>
       </ul>
     </nav>
