--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,15 @@
   <script src="/js/controllers/edit.js"></script>
   <script src="/js/controllers/map.js"></script>
   <script src="/js/controllers/chat.js"></script>
+  <script src="/js/controllers/meetcreator.js"></script>
 
   <script src="/js/models/user.js"></script>
   <script src="/js/services/authInterceptor.js"></script>
   <script src="/js/services/token.js"></script>
+  <script src="/js/services/formData.js"></script>
+  <script src="/js/services/geolocator.js"></script>
+  <script src="/js/services/geocoder.js"></script>
+  <script src="/js/directives/file.js"></script>
 
 
 
@@ -44,7 +49,7 @@
 <body ng-controller="MainController as main" >
   <header>
     <nav class="navbar navbar-light bg-faded">
-      <a class="navbar-brand" ui-sref="home">Meet2Eat</a>
+      <a class="navbar-brand" ui-sref="meetCreator">Meet2Eat</a>
       <ul class="nav navbar-nav">
         <li class="nav-item" ui-sref-active="active">
           <a class="nav-link" ui-sref="home">Home</a>
