--- a/public/index.html
+++ b/public/index.html
@@ -52,13 +52,16 @@
       <a class="navbar-brand" ui-sref="meetCreator">Meet2Eat</a>
       <ul class="nav navbar-nav">
         <li class="nav-item" ui-sref-active="active">
-          <a class="nav-link" ui-sref="home">Home</a>
+          <a class="nav-link" ui-sref="home">About</a>
         </li>
         <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
           <a class="nav-link" ui-sref="register">Register</a>
         </li>
         <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
           <a class="nav-link" ui-sref="login">Login</a>
+        </li>
+        <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
+          <a class="nav-link" ui-sref="meetCreator">Meet</a>
         </li>
         <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
           <a class="nav-link" ui-sref="users">Users</a>
