--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/bootstrap/dist/css/bootstrap.css"></script>
+  <script type="text/javascript" src="bower_components/lodash/dist/lodash.js"></script>
+  <script type="text/javascript" src="bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
  
   <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
@@ -36,7 +38,9 @@
   <script src="/js/services/formData.js"></script>
   <script src="/js/services/geolocator.js"></script>
   <script src="/js/services/geocoder.js"></script>
+  <script src="/js/services/restaurantlookup.js"></script>
   <script src="/js/directives/file.js"></script>
+  
 
 
 
