--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <head>
   <title>Meet2Eat</title>
   <meta charset="utf-8">
+  <link rel='shortcut icon' href='https://s3-eu-west-1.amazonaws.com/meetoeat/favicon.ico' type='image/x-icon'/ >
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
     <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
@@ -56,7 +58,7 @@
       <a class="navbar-brand" ui-sref="meetCreator">Meet2Eat</a>
       <ul class="nav navbar-nav">
         <li class="nav-item" ui-sref-active="active">
-          <a class="nav-link" ui-sref="home">About</a>
+          <a class="nav-link" ui-sref="about">About</a>
         </li>
         <li class="nav-item" ui-sref-active="active" ng-if="!main.currentUser">
           <a class="nav-link" ui-sref="register">Register</a>
@@ -83,6 +85,6 @@
     <div class="container" ng-if="main.errorMessage">
       <div class="alert alert-danger">{{ main.errorMessage }}</div>
     </div>
-  <main class="container" ui-view></main>
+  <main ui-view></main>
 </body>
 </html>
