--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
           <a class="nav-link" ui-sref="meetCreator">Meet</a>
         </li>
         <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
-          <a class="nav-link" ui-sref="users">Users</a>
+          <a class="nav-link" ui-sref="users">Chat</a>
         </li>
         <li class="nav-item" ui-sref-active="active" ng-if="main.currentUser">
           <a class="nav-link" ui-sref="map">Map</a>
