--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,24 @@
  <!DOCTYPE html>
-<html ng-app="Meet2Eat">
-<head>
+ <html ng-app="Meet2Eat">
+ <head>
   <title>Meet2Eat</title>
   <meta charset="utf-8">
   <link rel='shortcut icon' href='https://s3-eu-west-1.amazonaws.com/meetoeat/favicon.ico' type='image/x-icon'/ >
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
-    <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
-    <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBJ990JUIqfos2FWQPRQtxiavV3AhL72I"></script>
-    <script src="bower_components/socket.io-client/socket.io.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+  <script src="//npmcdn.com/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
+  <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
+  <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBJ990JUIqfos2FWQPRQtxiavV3AhL72I"></script>
+  <script src="/bower_components/socket.io-client/socket.io.js"></script>
 
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/bootstrap/dist/css/bootstrap.css"></script>
-  <script type="text/javascript" src="bower_components/lodash/dist/lodash.js"></script>
-  <script type="text/javascript" src="bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
- 
-  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/tether/dist/js/tether.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="/bower_components/lodash/dist/lodash.js"></script>
+  <script src="/bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
 
   <script src="/js/app.js"></script>
   <script src="/js/controllers/main.js"></script>
@@ -33,7 +30,6 @@
   <script src="/js/controllers/map.js"></script>
   <script src="/js/controllers/chat.js"></script>
   <script src="/js/controllers/meetcreator.js"></script>
-
   <script src="/js/models/user.js"></script>
   <script src="/js/services/authInterceptor.js"></script>
   <script src="/js/services/token.js"></script>
@@ -43,13 +39,9 @@
   <script src="/js/services/restaurantlookup.js"></script>
   <script src="/js/directives/file.js"></script>
   
-
-
-
-
- 
+  <link rel="stylesheet" type="text/css" href="/bower_components/tether/dist/css/tether.css">
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-
   
 </head>
 <body ng-controller="MainController as main" >
@@ -82,9 +74,9 @@
     </nav>
   </header>
 
-    <div class="container" ng-if="main.errorMessage">
-      <div class="alert alert-danger">{{ main.errorMessage }}</div>
-    </div>
+  <div class="container" ng-if="main.errorMessage">
+    <div class="alert alert-danger">{{ main.errorMessage }}</div>
+  </div>
   <main ui-view></main>
 </body>
 </html>
